--- a/Anime Website/DS.html
+++ b/Anime Website/DS.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../CSS/JJK.css">
-        <title>Hetuk Anime Website Jujutsu Kaisen Page</title>
+        <link rel="stylesheet" href="./CSS/DS.css">
+        <title>Hetuk Anime Website Demon Slayer Page</title>
     </head>
     <body>
         <header class="title">
@@ -91,38 +91,37 @@
                 </ul>
             </div>
             <div class="child2">
-                <img src="../utils/Facebook.svg" alt="Facebook Logo">
-                <img src="../utils/Youtube.png" alt="Youtube Logo"
+                <img src="./utils/Facebook.svg" alt="Facebook Logo">
+                <img src="./utils/Youtube.png" alt="Youtube Logo"
                     class="image">
             </div>
         </nav>
         <div class="parent">
             <div class="child3">
                 <div class="info">
-                    <p class="p1">Crunchyroll</p><span>•</span>
                     <p class="p2">Animated Series</p><span>•</span>
                     <p class="p3">Anime</p><span>•</span>
+                    <p class="p1">Crunchyroll</p><span>•</span>
                     <p class="p4">completed</p><span>•</span>
                     <p class="p5">hindi dub</p><span>•</span>
-                    <p class="p6">tamil dub</p><span>•</span>
-                    <p class="p7">telugu dub</p>
+                    <p class="p7">jio Cinema</p>
                 </div>
-                <h5>Jujutsu Kaisen Season 1 BluRay [Hindi-Tamil-Telugu-<br>Eng-Jap] Multi Audio 480p, 720p & 1080p HD | 10bit<br> HEVC ESub</h5>
+                <h5>Demon Slayer (Kimetsu no Yaiba) Season 1 Multi Audio<br> [Hindi-English-Jap] 480p, 720p & 1080p HD BluRay |<br> 10bit HEVC ESub</h5>
                 <div class="time">
                     <div class="date">
-                        <img src="../utils/Clock.svg"
+                        <img src="./utils/Clock.svg"
                             alt="clock image" class="clock">
                         <p>April 20, 2025</p>
                     </div>
                     <div class="source">
-                        <img src="../utils/Profile.svg"
+                        <img src="./utils/Profile.svg"
                             alt="Source Image" class="profile">
                         <p>Hetuk Patel</p>
                     </div>
                 </div>
-                <h4>||Untouched AAC 2.0 Multi Audio Crunchyroll Dub||</h4>
+                <h4>||Original WEB Hindi 192kbps AAC 2.0 Jio/Muse India Dub||</h4>
                 <h4 class="black">[1080p | 720p | 480p | Hindi - Tamil - Telugu - English - Japanese | BluRay | ESub]</h4>
-                <img src="../utils/Jujutsu Kaisen.jpg" alt="Jujutsu Kaisen" class="image1">
+                <img src="./utils/Demon Slayer.jpg" alt="Demon Slayer" class="image1">
                 <div class="anime_info">
                 <div class="genre">
                     <p class="red">Genre:</p>
@@ -130,19 +129,19 @@
                 </div>
                 <div class="org">
                     <p class="red">Org. Run:</p>
-                    <p class="bold">TV Series(2020-2021)</p>
+                    <p class="bold">TV Series(2019-2020)</p>
                 </div>
                 <div class="run">
                     <p class="red">Running Time:</p>
-                    <p class="bold">24min</p>
+                    <p class="bold">25min</p>
                 </div>
                 <div class="lang">
                     <p class="red">Language:</p>
-                    <p class="bold"> Japanese DD+2.0 [BD] - English - Tamil - Telugu - <a class="green">Hindi 2.0</a> [Org. CR WEB Audio]</p>
+                    <p class="bold"> Japanese DD+2.0 [BD] - English <a class="green">Hindi 2.0</a> [Org. JC WEB Audio]{NEW DUB}</p>
                 </div>
                 <div class="episodes">
                     <p class="red">Episodes:</p>
-                    <p class="bold">24</p>
+                    <p class="bold">26</p>
                 </div>
                 <div class="sub">
                     <p class="red">Subtitle:</p>
@@ -150,7 +149,7 @@
                 </div>
                 <div class="quality">
                     <p class="red">Quality:</p>
-                    <p class="bold">1080p FHD | 720p HD | 480p BDRip</p>
+                    <p class="bold">1080p FHD | 720p HD | 480p BluRay</p>
                 </div>
                 <div class="encoder">
                     <p class="red">Encoder:</p>
@@ -158,17 +157,15 @@
                 </div>
                 <div class="synopsis">
                     <p class="red">Synopsis:</p>
-                    <p class="bold_1">A boy swallows a cursed talisman - the finger of a demon - and becomes cursed himself. He enters a shaman's<br> school to be able to locate the demon's other body parts and thus exorcise himself.</p>
+                    <p class="bold_1"> A family is attacked by demons and only two members survive - Tanjiro and his sister Nezuko, who is turning into a<br> demon slowly. Tanjiro sets out to become a demon slayer to avenge his family and cure his sister.</p>
                 </div>
                 <div class="track">
                     <p class="track1">
                         Audio Track Info For 1080p HEVC [HQ]:-
                     </p>
-                    <p class="track1_1">Track 1:- Hindi AAC 2.0 Stereo 128kbps</p>
-                    <p class="track2">Track 2:- Tamil AAC 2.0 Stereo 128kbps</p>
-                    <p class="track2">Track 3:- Telugu AAC 2.0 Stereo 128kbps</p>
-                    <p class="track2">Track 4:- English AAC 2.0 Stereo 128kbps</p>
-                    <p class="track2">Track 5:- Japanese E-AC3 2.0 448kbps</p>
+                    <p class="track1_1">Track 1:- Hindi AAC 2.0 Stereo 192kbps</p>
+                    <p class="track2">Track 2:- English AC3 2.0 Stereo 384kbps</p>
+                    <p class="track2">Track 3:- Japanese E-AC3 2.0 384kbps</p>
                 </div>
             </div>
             <div class="screenshot">
@@ -176,7 +173,7 @@
                 <p class="bold_2">+</p>
             </div>
             <hr class="ss">
-            <p class="sl">||Download Jujutsu Kaisen Season 1 Episodes in Hindi Multi Audio||</p>
+            <p class="sl">||Download Demon Slayer: Kimetsu no Yaiba Season 1 Episodes in Hindi Multi Audio||</p>
             <div class="episode1">
                 <p>season 1</p>
                 <div class="episode1_2 open-popup-btn">
@@ -272,7 +269,15 @@
                     <p class="bold_2">+</p>
                 </div>
                 <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 24 {NEW}</p>
+                    <p class="small_1">Episode 24</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 25 {NEW}</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 26 {NEW}</p>
                     <p class="bold_2">+</p>
                 </div>
             </div>
@@ -305,8 +310,10 @@
             </div>
             </div>
             <p class="add">COMPLETE SEASON 1 ADDED</p>
-            <p class="season1">Download Season 2</p>
-            <p class="watch_on">Watch On Crunchyroll & Support Anime in India.</p>
+            <p class="season2">Download Season 2</p>
+            <p class="season2">Download Season 3</p>
+            <p class="season1">Download Season 4</p>
+            <p class="watch_on">Watch On Jio Cinema For Free & Support Anime in India.</p>
             <div class="click">
                 <p>how to download movies and series from here?</p>
                 <p class="red">click here</p>
@@ -337,7 +344,7 @@
             <div class="like_anime">
                 <div class="anime1">
                     <a href="./DN.html">
-                        <img src="../utils/Death Note(1).jpg" alt="Death Note">
+                        <img src="./utils/Death Note(1).jpg" alt="Death Note">
                     </a>
                     <a href="./DN.html">
                         <p>Death Note [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
@@ -345,18 +352,18 @@
                 </div>
                 <div class="anime2">
                     <a href="./Naruto.html">
-                        <img src="../utils/Naruto(1).jpg" alt="Naruto">
+                        <img src="./utils/Naruto(1).jpg" alt="Naruto">
                     </a>
                     <a href="./Naruto.html">
                         <p>Naruto Season 1 [Hindi-Tamil-Telugu-Eng-Jap] Multi-Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
                     </a>
                 </div>
                 <div class="anime3">
-                    <a href="./DS.html">
-                        <img src="../utils/Demon Slayer(1).jpg" alt="Demon Slayer">
+                    <a href="./JJK.html">
+                        <img src="./utils/Jujutsu Kaisen(1).jpg" alt="Jujutsu Kaisen">
                     </a>
-                    <a href="./DS.html">
-                        <p>Demon Slayer Season 1 [Hindi-Tamil-Telugu-Eng-Jap] Multi-Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
+                    <a href="./JJK.html">
+                        <p>Jujutsu Kaisen Season 1 [Hindi-Tamil-Telugu-Eng-Jap] Multi-Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
                     </a>
                 </div>
             </div>
@@ -368,7 +375,7 @@
                 <hr>
             </div>
             <div class="author_info">
-                <img src="../utils/Author Info.jpeg" alt="Author Image">
+                <img src="./utils/Author Info.jpeg" alt="Author Image">
                 <div class="text">
                     <h5>Hetuk Patel</h5>
                     <br>
@@ -398,11 +405,11 @@
                     <h6>Follow Me</h6>
                     <hr class="hr_1">
                     <div class="icons">
-                        <img src="../utils/Discord.svg" alt="Discord Icon">
-                        <img src="../utils/Telegram.svg" alt="Telegram Icon">
-                        <img src="../utils/Facebook (1).png"
+                        <img src="./utils/Discord.svg" alt="Discord Icon">
+                        <img src="./utils/Telegram.svg" alt="Telegram Icon">
+                        <img src="./utils/Facebook (1).png"
                             alt="Facebook Icon">
-                        <img src="../utils/Youtube.png" alt="Youtube Icon">
+                        <img src="./utils/Youtube.png" alt="Youtube Icon">
                     </div>
                     <h5>Latest Uploads</h5>
                     <hr class="hr_2">
@@ -415,19 +422,19 @@
                             </a>
                         </p>
                         <p>
-                            <a href="./DS.html">
                                 Demon Slayer Season
                                 01[Hindi-Tamil-Telugu-Eng-Jap]
                                 Multi Audio 480p, 720p &amp; 1080p HD WEB-DL |
                                 10bit
                                 HEVC ESub
-                            </a>
                         </p>
                         <p>
+                            <a href="./JJK.html">
                                 Jujutsu Kaisen Season 01
                                 [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p,
                                 720p
                                 &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                            </a>
                         </p>
                         <p>
                             <a href="./Naruto.html">
@@ -455,11 +462,11 @@
                     </div>
                     <h4>Join Us On Discord</h4>
                     <hr class="hr_3">
-                    <img src="../utils/Join_Us_Discord.png"
+                    <img src="./utils/Join_Us_Discord.png"
                         alt="Join Us Discord" class="discord">
                     <h3>Join Us On Telegram</h3>
                     <hr class="hr_4">
-                    <img src="../utils/Join_Us_Telegram.png"
+                    <img src="./utils/Join_Us_Telegram.png"
                         alt="Join Us On Telegram" class="telegram">
                     <h2>Advertisement</h2>
                     <hr class="hr_5">
@@ -471,8 +478,8 @@
             <p class="text1">Copyright © 2012-2025. All Rights Reserved by
                 <a>HETUKANIME4ALL</a>.</p>
             <div class="footer_img">
-                <img src="../utils/Facebook.svg" alt="Facebook">
-                <img src="../utils/Youtube.png" alt="Youtube" class="image">
+                <img src="./utils/Facebook.svg" alt="Facebook">
+                <img src="./utils/Youtube.png" alt="Youtube" class="image">
             </div>
         </div>
             </div>
