--- a/Anime Website/index.html
+++ b/Anime Website/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../CSS/index.css">
+        <link rel="stylesheet" href="./CSS/index.css">
         <title>Hetuk Anime Website</title>
     </head>
 
@@ -98,16 +98,16 @@
                     </ul>
                 </div>
                 <div class="child2">
-                    <img src="../utils/Facebook.svg" alt="Facebook Logo">
-                    <img src="../utils/Youtube.png" alt="Youtube Logo"
+                    <img src="./utils/Facebook.svg" alt="Facebook Logo">
+                    <img src="./utils/Youtube.png" alt="Youtube Logo"
                         class="image">
                 </div>
             </nav>
             <div class="parent">
                 <div class="recent">
                     <div class="item">
-                        <a href="../HTML/SL.html">
-                            <img src="../utils/Solo Leveling.jpg"
+                        <a href="./SL.html">
+                            <img src="./utils/Solo Leveling.jpg"
                                 alt="Solo Leveling"
                                 class="image1">
                             <div class="text">
@@ -122,7 +122,7 @@
                     </div>
                     <div class="item">
                         <a href="./JJK.html">
-                            <img src="../utils/Jujutsu Kaisen.jpg"
+                            <img src="./utils/Jujutsu Kaisen.jpg"
                                 alt="Jujutsu Kaisen"
                                 class="image1">
                             <div class="text">
@@ -136,7 +136,7 @@
                     </div>
                     <div class="item">
                         <a href="./DS.html">
-                            <img src="../utils/Demon Slayer.jpg"
+                            <img src="./utils/Demon Slayer.jpg"
                                 alt="Demon Slayer"
                                 class="image1">
                             <div class="text">
@@ -151,7 +151,7 @@
                     </div>
                     <div class="item">
                         <a href="./Naruto.html">
-                            <img src="../utils/Naruto.jpg" alt="Naruto"
+                            <img src="./utils/Naruto.jpg" alt="Naruto"
                                 class="image1">
                             <div class="text">
                                 Naruto Season 1 [Hindi-Tamil-Telugu-Eng-Jap]
@@ -164,7 +164,7 @@
                     </div>
                     <div class="item">
                         <a href="./DN.html">
-                            <img src="../utils/Death Note.jpg" alt="Death Note"
+                            <img src="./utils/Death Note.jpg" alt="Death Note"
                                 class="image1">
                             <div class="text">
                                 Death Note [Hindi-Tamil-Telugu-Eng-Jap] Multi
@@ -179,12 +179,12 @@
                     <div class="parent1">
                         <div class="child3">
                             <div class="anime">
-                                <img src="../utils/Solo Leveling(1).jpg"
+                                <img src="./utils/Solo Leveling(1).jpg"
                                     alt="Solo Leveling Image"
                                     class="latest_img">
                                 <div class="description">
                                     <p>
-                                        <a href="../HTML/SL.html">
+                                        <a href="./SL.html">
                                             Solo Leveling Season 2:<br> Arise
                                             from
                                             the
@@ -198,12 +198,12 @@
                                     <br>
                                     <div class="time">
                                         <div class="date">
-                                            <img src="../utils/Clock.svg"
+                                            <img src="./utils/Clock.svg"
                                                 alt="clock image" class="clock">
                                             <p>April 20, 2025</p>
                                         </div>
                                         <div class="source">
-                                            <img src="../utils/Profile.svg"
+                                            <img src="./utils/Profile.svg"
                                                 alt="Source Image"
                                                 class="profile">
                                             <p>Hetuk Patel</p>
@@ -212,7 +212,7 @@
                                 </div>
                             </div>
                             <div class="anime">
-                                <img src="../utils/Jujutsu Kaisen(1).jpg"
+                                <img src="./utils/Jujutsu Kaisen(1).jpg"
                                     alt="Jujutsu Kaisen" class="latest_img">
                                 <div class="description">
                                     <p>
@@ -230,12 +230,12 @@
                                     <br>
                                     <div class="time">
                                         <div class="date">
-                                            <img src="../utils/Clock.svg"
+                                            <img src="./utils/Clock.svg"
                                                 alt="clock image" class="clock">
                                             <p>April 20, 2025</p>
                                         </div>
                                         <div class="source">
-                                            <img src="../utils/Profile.svg"
+                                            <img src="./utils/Profile.svg"
                                                 alt="Source Image"
                                                 class="profile">
                                             <p>Hetuk Patel</p>
@@ -244,7 +244,7 @@
                                 </div>
                             </div>
                             <div class="anime">
-                                <img src="../utils/Demon Slayer(1).jpg"
+                                <img src="./utils/Demon Slayer(1).jpg"
                                     alt="Demon Slayer" class="latest_img">
                                 <div class="description">
                                     <p>
@@ -260,12 +260,12 @@
                                     <br>
                                     <div class="time">
                                         <div class="date">
-                                            <img src="../utils/Clock.svg"
+                                            <img src="./utils/Clock.svg"
                                                 alt="clock image" class="clock">
                                             <p>April 20, 2025</p>
                                         </div>
                                         <div class="source">
-                                            <img src="../utils/Profile.svg"
+                                            <img src="./utils/Profile.svg"
                                                 alt="Source Image"
                                                 class="profile">
                                             <p>Hetuk Patel</p>
@@ -274,7 +274,7 @@
                                 </div>
                             </div>
                             <div class="anime">
-                                <img src="../utils/Death Note(1).jpg"
+                                <img src="./utils/Death Note(1).jpg"
                                     alt="Death Note" class="latest_img">
                                 <div class="description">
                                     <p>
@@ -290,12 +290,12 @@
                                     <br>
                                     <div class="time">
                                         <div class="date">
-                                            <img src="../utils/Clock.svg"
+                                            <img src="./utils/Clock.svg"
                                                 alt="clock image" class="clock">
                                             <p>April 20, 2025</p>
                                         </div>
                                         <div class="source">
-                                            <img src="../utils/Profile.svg"
+                                            <img src="./utils/Profile.svg"
                                                 alt="Source Image"
                                                 class="profile">
                                             <p>Hetuk Patel</p>
@@ -304,7 +304,7 @@
                                 </div>
                             </div>
                             <div class="anime">
-                                <img src="../utils/Naruto(1).jpg" alt="Naruto"
+                                <img src="./utils/Naruto(1).jpg" alt="Naruto"
                                     class="latest_img">
                                 <div class="description">
                                     <p>
@@ -322,12 +322,12 @@
                                     <br>
                                     <div class="time">
                                         <div class="date">
-                                            <img src="../utils/Clock.svg"
+                                            <img src="./utils/Clock.svg"
                                                 alt="clock image" class="clock">
                                             <p>April 20, 2025</p>
                                         </div>
                                         <div class="source">
-                                            <img src="../utils/Profile.svg"
+                                            <img src="./utils/Profile.svg"
                                                 alt="Source Image"
                                                 class="profile">
                                             <p>Hetuk Patel</p>
@@ -336,7 +336,7 @@
                                 </div>
                             </div>
                             <div class="anime">
-                                <img src="../utils/Attack On Titan(1).jpg"
+                                <img src="./utils/Attack On Titan(1).jpg"
                                     alt="Attack On Titan" class="latest_img">
                                 <div class="description">
                                     <p>
@@ -352,12 +352,12 @@
                                     <br>
                                     <div class="time">
                                         <div class="date">
-                                            <img src="../utils/Clock.svg"
+                                            <img src="./utils/Clock.svg"
                                                 alt="clock image" class="clock">
                                             <p>April 20, 2025</p>
                                         </div>
                                         <div class="source">
-                                            <img src="../utils/Profile.svg"
+                                            <img src="./utils/Profile.svg"
                                                 alt="Source Image"
                                                 class="profile">
                                             <p>Hetuk Patel</p>
@@ -380,18 +380,18 @@
                         <h6>Follow Me</h6>
                         <hr class="hr_1">
                         <div class="icons">
-                            <img src="../utils/Discord.svg" alt="Discord Icon">
-                            <img src="../utils/Telegram.svg"
+                            <img src="./utils/Discord.svg" alt="Discord Icon">
+                            <img src="./utils/Telegram.svg"
                                 alt="Telegram Icon">
-                            <img src="../utils/Facebook (1).png"
+                            <img src="./utils/Facebook (1).png"
                                 alt="Facebook Icon">
-                            <img src="../utils/Youtube.png" alt="Youtube Icon">
+                            <img src="./utils/Youtube.png" alt="Youtube Icon">
                         </div>
                         <h5>Latest Uploads</h5>
                         <hr class="hr_2">
                         <div class="uploads">
                             <p>
-                                <a href="../HTML/SL.html">
+                                <a href="./SL.html">
                                     Solo Leveling Season 2: Arise from the
                                     Shadow
                                     [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio
@@ -448,11 +448,11 @@
                         </div>
                         <h4>Join Us On Discord</h4>
                         <hr class="hr_3">
-                        <img src="../utils/Join_Us_Discord.png"
+                        <img src="./utils/Join_Us_Discord.png"
                             alt="Join Us Discord" class="discord">
                         <h3>Join Us On Telegram</h3>
                         <hr class="hr_4">
-                        <img src="../utils/Join_Us_Telegram.png"
+                        <img src="./utils/Join_Us_Telegram.png"
                             alt="Join Us On Telegram" class="telegram">
                         <h2>Advertisement</h2>
                         <hr class="hr_5">
@@ -464,8 +464,8 @@
                 <p class="text1">Copyright © 2012-2025. All Rights Reserved by
                     <a>HETUKANIME4ALL</a>.</p>
                 <div class="footer_img">
-                    <img src="../utils/Facebook.svg" alt="Facebook">
-                    <img src="../utils/Youtube.png" alt="Youtube" class="image">
+                    <img src="./utils/Facebook.svg" alt="Facebook">
+                    <img src="./utils/Youtube.png" alt="Youtube" class="image">
                 </div>
             </div>
         </body>
